# KRS-API-SPARK-JOB

./: .env.example  .gitignore  README.md  config.py  gold.py  pyproject.toml  run.py
dags/: krs_api_pipeline.py
spark_processors/: config.py
spark_processors/krs_api_processor/: krs_api_loader_bronze.py  krs_api_loader_gold.py  krs_api_loader_silver.py
spark_processors/krs_api_processor/functions/: join_row_as_of.py  join_row_as_of_shares.py  load_from_delta.py  orphaned_rows_valid_to.py  write_to_delta.py
spark_processors/krs_api_processor/helpers/: dataframe_info.py
spark_processors/krs_api_processor/schemas/: schema_raw_krs_api_json.py
