[tool.poetry]
name = "krs-api-spark-processor"
version = "0.1.0"
description = "KRS Spark processors (bronze/silver/gold) + helpers"
authors = ["Pomeran <lejk99@icloud.com>"]
readme = "README.md"
packages = [
  { include = "spark_processors" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyspark = ">=4.0.0,<5.0.0"
python-dotenv = ">=1.0.0"            # correct package name (was 'dotenv')
psycopg = ">=3.2.9,<4.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"